# Othello-MMP

./: .gitmodules  CMakeLists.txt  LICENSE
include/othello/: App.hpp
include/othello/ai/: AlphaBetaPruningPlayer.hpp  HeuristicPlayer.hpp  ILearningPlayer.hpp  MoveEvaluator.hpp  QLearningPlayer.hpp  RandomPlayer.hpp
include/othello/cmd/: BoardPrinter.hpp  HumanPlayer.hpp
include/othello/game/: Board.hpp  Game.hpp  IPlayer.hpp  Move.hpp  Tile.hpp
include/othello/stats/: StatisticsManager.hpp
include/othello/util/: FutureValue.hpp  Tree.hpp  WorkerThreadManager.hpp
libs/lib/windows/cmake/boost_atomic-1.72.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_atomic-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_atomic-variant-mgw81-mt-x32-1_72-static.cmake  libboost_atomic-variant-mgw81-mt-x64-1_72-static.cmake
libs/lib/windows/cmake/boost_chrono-1.72.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_chrono-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_chrono-variant-mgw81-mt-x32-1_72-static.cmake  libboost_chrono-variant-mgw81-mt-x64-1_72-static.cmake
libs/lib/windows/cmake/boost_container-1.72.0/: boost_container-config.cmake  libboost_container-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_container-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_container-variant-mgw81-mt-x32-1_72-static.cmake  libboost_container-variant-mgw81-mt-x64-1_72-static.cmake
libs/lib/windows/cmake/boost_context-1.72.0/: boost_context-config.cmake  libboost_context-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_context-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_context-variant-mgw81-mt-x32-1_72-static.cmake  libboost_context-variant-mgw81-mt-x64-1_72-static.cmake
libs/lib/windows/cmake/boost_contract-1.72.0/: boost_contract-config.cmake  libboost_contract-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_contract-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_contract-variant-mgw81-mt-x32-1_72-static.cmake  libboost_contract-variant-mgw81-mt-x64-1_72-static.cmake
libs/lib/windows/cmake/boost_coroutine-1.72.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mgw81-mt-d-x32-1_72-static.cmake  libboost_coroutine-variant-mgw81-mt-d-x64-1_72-static.cmake  libboost_coroutine-variant-mgw81-mt-x32-1_72-static.cmake  libboost_coroutine-variant-mgw81-mt-x64-1_72-static.cmake
src/: main.cpp
src/othello/: App.cpp
src/othello/ai/: AlphaBetaPruningPlayer.cpp  MoveEvaluator.cpp  QLearningPlayer.cpp
src/othello/cmd/: BoardPrinter.cpp
src/othello/game/: Board.cpp  Game.cpp
src/othello/stats/: StatisticsManager.cpp
(+164 files in other folders)
